# googletest_test1

./: CMakeLists.txt
src/: CMakeLists.txt  calc.cpp  calc.h
test/: CMakeLists.txt  calc_test.cpp
